# petting_zoo

./: .gitignore  README.md  main_zoo.py  pyproject.toml
custom-environment/: main.py
custom-environment/env/: custom_environment.py  custom_masked_environment.py
tutorial_envs/: aec_env.py  main_zoo.py  parallel_env.py
